kubernetes/cluster/media/stash/stash.yaml
# Service: Stash
# Ingress: stash.brhd.io
# Label: app.kubernetes.io/name: stash
---
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: media
  labels:
    app.kubernetes.io/name: stash
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9999
  selector:
    app.kubernetes.io/name: stash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stash
  labels:
    app.kubernetes.io/name: stash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: stash
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stash
    spec:
      restartPolicy: Always
      containers:
        - name: stash
          image: stashapp/stash:v0.31.0
          resources:
            requests:
              memory: 1000Mi
              cpu: 1000m
            limits:
              memory: 2000Mi
              cpu: 3000m
              gpu.intel.com/i915: 1
          ports:
            - containerPort: 9999
          volumeMounts:
            - name: stash-config
              mountPath: /root/.stash
            - name: stash-metadata
              mountPath: /metadata
            - name: stash-cache
              mountPath: /cache
            - name: stash-generated
              mountPath: /generated
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: stash-config
          persistentVolumeClaim:
            claimName: stash-config
        - name: stash-metadata
          persistentVolumeClaim:
            claimName: stash-metadata
        - name: stash-cache
          persistentVolumeClaim:
            claimName: stash-cache
        - name: stash-generated
          persistentVolumeClaim:
            claimName: stash-generated
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
